{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Movement",
            "id": "f8e83283-eea2-4c2e-8c39-0775c6c432b4",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "94272403-bc4f-4bed-bc16-c48196260857",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateR",
                    "type": "PassThrough",
                    "id": "6b207796-a191-4e49-8602-7d6c81133184",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateL",
                    "type": "PassThrough",
                    "id": "9a2e4749-6dfc-4f52-94a3-643dc960a95b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ded5e521-67fe-4af2-b7f8-4a6d5f0c3e94",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b25584e-92c1-41e7-971c-629f454a4a59",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1631b845-e77e-4862-a3a6-e8ed9513f058",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateL",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Attack",
            "id": "9eb79696-6467-4aca-846b-b57ca11d07d8",
            "actions": [
                {
                    "name": "SingleAttack",
                    "type": "Button",
                    "id": "e17de8b9-a5c8-464c-800a-85859501729f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "HeavyAttack",
                    "type": "Button",
                    "id": "6f03c82e-54d1-4dae-a4c0-4d1606198b7e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fd542850-a8dc-44df-8388-822500648076",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SingleAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32d5cb20-ce5b-4184-8708-fa39f34f773b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Pause",
            "id": "0325648c-0715-478c-9ff3-d4e797a3df1c",
            "actions": [
                {
                    "name": "PauseGame",
                    "type": "Button",
                    "id": "3468cd78-c868-4ad0-8720-93d035fb5120",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b1060dc8-493a-4028-926a-3f993e46f24e",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}